# gRPC_Project

./: CMakeLists.txt  client copy.cpp  client.cpp  example.proto  example.proto_bak  server copy.cpp  server.cpp
